--- a/BUGTRACK_WEB_API/appsettings.json
+++ b/BUGTRACK_WEB_API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTrackData;Trusted_Connection=True;MultipleActiveResultSets=true",
-    //"DefaultConnection": "Server=tcp:bugtrack123.database.windows.net,1433;Initial Catalog=BugTrack;Persist Security Info=False;User ID=BUGTRACK;Password=xxxxxxxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=tcp:bugtrack123.database.windows.net,1433;Initial Catalog=BugTrack;Persist Security Info=False;User ID=BUGTRACK;Password=xxxxxxxxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
