UnitTests and tweaks.

--- a/BUGTRACK_WEB_API/appsettings.json
+++ b/BUGTRACK_WEB_API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTrackData;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTrackData;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=tcp:bugtrack123.database.windows.net,1433;Initial Catalog=BugTrack;Persist Security Info=False;User ID=BUGTRACK;Password=xxxxxxxxx;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
@@ -9,5 +9,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "https_port": 444
 }
