--- a/BugTrack_UI/BugTrack_UI.csproj
+++ b/BugTrack_UI/BugTrack_UI.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-BugTrack_UI-cc8ffacb-3c55-42de-b075-37fa43123293</UserSecretsId>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <ItemGroup>
