--- a/BugTrack_UI/appsettings.json
+++ b/BugTrack_UI/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTrackData;Trusted_Connection=True;MultipleActiveResultSets=true",
-   // "DefaultConnection": "Server=tcp:bugtrack123.database.windows.net,1433;Initial Catalog=BugTrack;Persist Security Info=False;User ID=BUGTRACK;Password=XXXXXXX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BugTrackData;Trusted_Connection=True;MultipleActiveResultSets=true"
+    // "DefaultConnection": "Server=tcp:bugtrack123.database.windows.net,1433;Initial Catalog=BugTrack;Persist Security Info=False;User ID=BUGTRACK;Password=XXXXXXX;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "APIDetails": {
-    "APIURI": "Https://Localhost:7164",
+    "APIURI": "Https://Localhost:7164"
     //"APIURI": "Https://bugtrackapi20221129042335.azurewebsites.net/"
 
   },
@@ -15,5 +15,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "https_port": 443
 }
