--- a/AppServices/Properties/launchSettings.json
+++ b/AppServices/Properties/launchSettings.json
@@ -6,7 +6,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
-      "applicationUrl": "https://localhost:57112;http://localhost:57113"
+      "applicationUrl": "http://localhost:57113"
     }
   }
 }
+//https://localhost:57112;
